<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dean.homemarketplace.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sewa"
        android:name="com.dean.homemarketplace.ui.fragment.SewaFragment"
        android:label="@string/title_sewa"
        tools:layout="@layout/fragment_sewa" />

    <fragment
        android:id="@+id/navigation_jual"
        android:name="com.dean.homemarketplace.ui.fragment.JualFragment"
        android:label="@string/title_jual"
        tools:layout="@layout/fragment_jual" />
</navigation>