<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/belowimg"
        android:scaleType="centerCrop"
        android:src="@drawable/tower"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/login_account"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorPrimary"
        android:textSize="26dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="20dp"
                android:drawableTint="@android:color/white"
                android:hint="@string/email"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_pass_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="20dp"
                android:drawableTint="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <Button
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@drawable/bg_btn"
                android:text="Masuk"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/createAkunLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/not_a_member_get_registered_now"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_registeredSosmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/login_with_your_social_media_account"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/signin_with_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/estate3" />

</RelativeLayout>