<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthenticationHpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/belowimg"
        android:scaleType="centerCrop"
        android:src="@drawable/tower"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/authentication"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/authentication_hp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_auth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authentication"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/_70dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_auth_hp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35dp"
                android:background="@drawable/btn"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="20dp"
                android:drawableTint="@color/white"
                android:hint="@string/input_nomor_telepon"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />


            <TextView
                android:id="@+id/tv_submit_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:gravity="center"
                android:textSize="@dimen/_15sp"
                android:text="@string/submit_number"
                android:textColor="@color/white"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/authentication"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/estate3" />

</RelativeLayout>
